--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "cors": "^2.8.4",
     "data-uri-to-buffer": "^2.0.0",
     "ember-ajax": "^2.4.1",
+    "ember-bootstrap-datetimepicker": "1.1.0",
     "ember-cli": "2.10.0",
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-babel": "^5.1.7",
     "ember-cli-dependency-checker": "^1.3.0",
+    "ember-cli-g-maps": "0.5.14",
     "ember-cli-htmlbars": "^1.0.10",
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-jshint": "^2.0.1",
+    "ember-cli-moment-shim": "3.5.0",
     "ember-cli-qunit": "^3.0.1",
     "ember-cli-release": "^0.2.9",
     "ember-cli-sass": "7.1.2",
@@ -39,6 +42,7 @@
     "ember-lodash": "4.17.6",
     "ember-resolver": "^2.0.3",
     "ember-welcome-page": "^1.0.3",
+    "eonasdan-bootstrap-datetimepicker": "4.17.47",
     "loader.js": "^4.0.10",
     "mysql": "github:mysqljs/mysql"
   },
